@@ -10,6 +10,7 @@
 
  1.8 beta 2: (2010-??-??)
  + AlpineQuestMap atlas creator updated (patch by Camille) 
+ + New map source: Navitel (Russian)
 
  1.8 beta 1: (2010-08-24)
  ! Fixed PNG 256 color output
